--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/carteira_cliente
-spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 #API DE ENDERECO
@@ -8,9 +8,9 @@ API_IBGE=https://servicodados.ibge.gov.br/api/v1/localidades/
 API_CEP=https://viacep.com.br/ws/
 
 #SMTP - SEND EMAIL
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=jose.pasqualli@gmail.com
-spring.mail.password=dszxqdthbiwrutag
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
